# M3Lx

./: .gitignore  .gitmodules  build.py  build.sh  buildandrun.sh  buildlx.sh
apps/: Cargo.toml  build.py
apps/.cargo/: config.toml
apps/lxbench/: Cargo.toml
apps/lxbench/src/: bmisc.rs  lxbench.rs
apps/lxcppbenchs/: build.py  lxcppbenchs.cc
apps/lxrustbenchs/: Cargo.toml
apps/lxrustbenchs/src/: bact.rs  bmisc.rs  bregfile.rs  lxrustbenchs.rs
apps/starter/: Cargo.toml
apps/starter/src/: starter.rs
apps/tcutest/: Cargo.toml
apps/tcutest/src/: tcutest.rs
configs/: gem5.dts  hw.dts  hw23.dts
rootfs/etc/: inittab
src/: Cargo.toml  build.py
src/base/: Cargo.toml  build.py
src/base/src/: lib.rs
src/base/src/arch/: mod.rs
src/base/src/arch/kachel/: cfg.rs  envdata.rs  serial.rs  tcu.rs
src/base/src/arch/linux/: ioctl.rs  mmap.rs
src/base/src/kif/: tilemux.rs
src/base/src/time/: profile.rs
src/lxbench/: Cargo.toml
src/lxbench/src/: bmisc.rs  bregfile.rs  lxbench.rs
src/lxclient/: Cargo.toml  build.py
src/lxclient/.cargo/: config  config.toml
src/lxclient/src/: bregfile.rs  int_enum.rs  lxclient.rs  main.rs  mmap.rs  sidecall_interface.rs  tcu.rs
src/m3/: Cargo.toml  build.py
src/m3/src/: lib.rs  test.rs
src/m3/src/com/: rbufs.rs
src/m3/src/net/: debug.rs
src/m3/src/tiles/: ownactivity.rs
src/simplebench/: Cargo.toml  build.py
src/simplebench/.cargo/: config
src/simplebench/src/: simplebench.rs
src/starter/: Cargo.toml
src/starter/src/: starter.rs
src/util/: Cargo.toml
src/util/src/: ioctl.rs  lib.rs  mmap.rs
(+4 files in other folders)
