[package]
name = "lxbench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lxbench"
path = "src/lxbench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
util = { path = "../util" }
m3impl = { path = "../../../src/libs/rust/m3impl", features = ["linux"] }
