[package]
name = "lxclient"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lxclient"
path = "src/lxclient.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
base = { path = "../base" }
util = { path = "../util" }
m3 = { path = "../m3" }
