[package]
name = "simplebench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "simplebench"
path = "src/simplebench.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = { path = "../../../src/libs/rust/base", features = ["linux"] }
util = { path = "../util" }
